@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST xfce4-dev-tools-4.5.92.tar.bz2 62206 RMD160 07ae579d9e095d5c0801563e58152153b0dce095 SHA1 c37bc3090a7d8e6a0c1809b8658870931557135b SHA256 b9e95023ece242cf82c42387e50ba2ca6ee969419ca57b318bf2727e3e9e0bba
+EBUILD xfce4-dev-tools-4.5.92.ebuild 411 RMD160 1d5acf3cf70a93ca04d7622668be07390e07baf6 SHA1 1695bc28ac831b876cd66a989f3dde48e1f5e692 SHA256 1325fff33330c89a8d5e0e17362e368cf02401aa929ce93c7219bae8a72119a6
 EBUILD xfce4-dev-tools-9999.ebuild 411 RMD160 1d5acf3cf70a93ca04d7622668be07390e07baf6 SHA1 1695bc28ac831b876cd66a989f3dde48e1f5e692 SHA256 1325fff33330c89a8d5e0e17362e368cf02401aa929ce93c7219bae8a72119a6
-MISC ChangeLog 209 RMD160 d00d230594c3ab8220713d255925e6e02322f7d3 SHA1 3108c1ae07a2710367c618afb3e525f152e1dec9 SHA256 f9074f2724e31b604cd667e238c8e3c85f76267fead630fb1f71c28279ce8368
+MISC ChangeLog 358 RMD160 a1ae89a1f4b989e95271230e306161440b2273da SHA1 3fc3464ec879604cdfa5f9dd31bb151ff3b5e0ba SHA256 fb40448b8be1ba0530ad0ad9cc69d35a2937d1e010ca8414ba83581800e3dd70
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa/nLwCfal0kmRtWCYZYq2svh1BWC2bA
-xRsAnAgK6kFhIuD1usFp/qD00vVlrieA
-=prTr
+iEYEARECAAYFAkkdtYQACgkQKhnDs22gwa9LlgCbBoL+YgUGlf3BAcdQ7LlPe5s6
+YJYAoOnbWRT3tUq2ZvoJ3aOjprUt0Pfk
+=YG3Q
 -----END PGP SIGNATURE-----
